@@ -8,17 +8,18 @@
 
 package org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.distributed_cpa.predicate;
 
+import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import org.sosy_lab.cpachecker.cfa.CFA;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.communication.DssSerializeObjectUtil;
+import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.communication.messages.ContentReader;
+import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.communication.messages.DssMessage;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.decomposition.graph.BlockNode;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.distributed_cpa.operators.deserialize.DeserializeOperator;
-import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange.actor_messages.DssMessage;
-import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange.actor_messages.DssPostConditionMessage;
-import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange.actor_messages.DssViolationConditionMessage;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
 import org.sosy_lab.cpachecker.core.interfaces.StateSpacePartition;
 import org.sosy_lab.cpachecker.cpa.predicate.PredicateAbstractState;
@@ -30,7 +31,6 @@ import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap.SSAMapBuilder;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.PointerTargetSet;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
-import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
 import org.sosy_lab.cpachecker.util.states.MemoryLocation;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.Formula;
@@ -38,7 +38,6 @@ import org.sosy_lab.java_smt.api.Formula;
 public class DeserializePredicateStateOperator implements DeserializeOperator {
 
   private final PredicateCPA predicateCPA;
-  private final Solver solver;
   private final FormulaManagerView formulaManagerView;
   private final PathFormulaManager pathFormulaManager;
   private final CFA cfa;
@@ -49,47 +48,44 @@ public class DeserializePredicateStateOperator implements DeserializeOperator {
       PredicateCPA pPredicateCPA,
       CFA pCFA,
       BlockNode pBlockNode,
-      Map<MemoryLocation, CType> pVariableTypes,
-      Solver pSolver) {
+      Map<MemoryLocation, CType> pVariableTypes) {
     predicateCPA = pPredicateCPA;
-    variableTypes = pVariableTypes;
-    solver = pSolver;
-    formulaManagerView = solver.getFormulaManager();
+    formulaManagerView = predicateCPA.getSolver().getFormulaManager();
     pathFormulaManager = pPredicateCPA.getPathFormulaManager();
     previousState =
         (PredicateAbstractState)
             predicateCPA.getInitialState(
                 pBlockNode.getInitialLocation(), StateSpacePartition.getDefaultPartition());
     cfa = pCFA;
+    variableTypes = pVariableTypes;
   }
 
   @Override
   public AbstractState deserialize(DssMessage pMessage) throws InterruptedException {
-    String formula =
-        PredicateOperatorUtil.extractFormulaString(
-            pMessage, predicateCPA.getClass(), formulaManagerView);
-    SSAMap map = SSAMap.emptySSAMap();
-    PointerTargetSet pts = PointerTargetSet.emptyPointerTargetSet();
-
     SerializationInfoStorage.storeSerializationInformation(predicateCPA, cfa);
+    ContentReader predicateContent = pMessage.getAbstractStateContent(PredicateAbstractState.class);
     try {
-      if (pMessage instanceof DssPostConditionMessage bspcm) {
-        map = bspcm.getSSAMap();
-        pts = bspcm.getPointerTargetSet();
-      } else if (pMessage instanceof DssViolationConditionMessage bsecm) {
-        map = bsecm.getSSAMap();
-        pts = bsecm.getPointerTargetSet();
-      }
+      String serializedSsaMap = predicateContent.get(SerializePredicateStateOperator.SSA_KEY);
+      Preconditions.checkNotNull(serializedSsaMap, "SSA Map must be provided");
+      SSAMap map = DssSerializeObjectUtil.deserialize(serializedSsaMap, SSAMap.class);
+
+      String serializedPts = predicateContent.get(SerializePredicateStateOperator.PTS_KEY);
+      Preconditions.checkNotNull(serializedPts, "PTS must be provided");
+      PointerTargetSet pts =
+          DssSerializeObjectUtil.deserialize(serializedPts, PointerTargetSet.class);
+
+      String serializedState = predicateContent.get(STATE_KEY);
+      Preconditions.checkNotNull(serializedState, "State must be provided");
+
+      PathFormula abstraction =
+          PredicateOperatorUtil.getPathFormula(
+              serializedState, pathFormulaManager, formulaManagerView, pts, map);
+
+      return PredicateAbstractState.mkNonAbstractionStateWithNewPathFormula(
+          abstraction, previousState);
     } finally {
       SerializationInfoStorage.clear();
     }
-
-    PathFormula abstraction =
-        PredicateOperatorUtil.getPathFormula(
-            formula, pathFormulaManager, formulaManagerView, pts, map);
-
-    return PredicateAbstractState.mkNonAbstractionStateWithNewPathFormula(
-        abstraction, previousState);
   }
 
   @Override
@@ -99,7 +95,7 @@ public class DeserializePredicateStateOperator implements DeserializeOperator {
     for (Entry<String, Formula> entry : formulaManagerView.extractVariables(pFormula).entrySet()) {
       String instantiatedName = entry.getKey();
       List<String> parts = Splitter.on("@").splitToList(instantiatedName);
-      String qualifiedName = parts.get(0);
+      String qualifiedName = parts.getFirst();
 
       MemoryLocation memoryLocation = MemoryLocation.fromQualifiedName(qualifiedName);
       CType variableType = variableTypes.get(memoryLocation);
